V8: Fix Nested Content configuration overflow on smaller screens (#7006)

--- a/src/Umbraco.Web.UI.Client/src/less/components/umb-nested-content.less
+++ b/src/Umbraco.Web.UI.Client/src/less/components/umb-nested-content.less
@@ -248,7 +248,6 @@
 }
 
 .umb-nested-content__placeholder {
-    height: 22px;
     padding: 4px 6px;    
     border: 1px dashed #d8d7d9;
     background: 0 0;
@@ -259,13 +258,10 @@
     text-align: center;
 
     &--selected {
-        border: 1px solid #d8d7d9;
+        border: none;
         text-align: left;
+        padding: 0;
     }
-}
-
-.umb-nested-content__placeholder-name{
-    font-size: 15px;
 }
 
 .umb-nested-content__placeholder:hover {
@@ -273,18 +269,6 @@
     border-color: #2152a3;
     text-decoration: none;
 }
-
-.umb-nested-content__placeholder-icon-holder {    
-    width: 20px;
-    text-align: center;
-    display: inline-block;
-}
-
-.umb-nested-content__placeholder-icon {
-    font-size: 18px;
-    vertical-align: middle;
-}
-
 
 .form-horizontal .umb-nested-content--narrow .controls-row {
     margin-left: 40% !important;
